RESOLVED FIXED311098
Fix wrong static_cast in lvalue dynamicOSObjectCast overloads and add test coverage
https://bugs.webkit.org/show_bug.cgi?id=311098
Summary Fix wrong static_cast in lvalue dynamicOSObjectCast overloads and add test co...
Chris Dumez
Reported 2026-03-30 05:09:34 PDT
Fix wrong static_cast in lvalue dynamicOSObjectCast overloads and add test coverage.
Attachments
Chris Dumez
Comment 1 2026-03-30 05:15:05 PDT
EWS
Comment 2 2026-03-30 18:30:31 PDT
Committed 310272@main (1846b8e3c9d7): <https://commits.webkit.org/310272@main> Reviewed commits have been landed. Closing PR #61689 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-30 18:31:13 PDT
Note You need to log in before you can comment on or make changes to this bug.