Source/WTF/wtf/darwin/TypeCastsOSObject.h
@@ -107,7 +107,7 @@ inline OSObjectPtr<T> dynamicOSObjectCast(const OSObjectPtr<U>& object)
     if (!isOSObject<typename OSObjectTypeCastTraits<T>::BaseType>(object.get()))
         return nullptr;
 
-    return static_cast<T*>(object.get());
+    return static_cast<T>(object.get());
 }
 
 template<typename T> inline T dynamicOSObjectCast(id object)
@@ -167,7 +167,7 @@ inline OSObjectPtr<T> dynamicOSObjectCast(const OSObjectPtr<U>& object)
     if (!isOSObject<typename OSObjectTypeCastTraits<T>::BaseType>(object.get()))
         return nullptr;
 
-    return static_cast<T*>(object.get());
+    return static_cast<T>(object.get());
 }
 
 #endif // !defined(__OBJC__)
